--- a/CentroDeportivoElBicho/Views/Trabajador/LoginTrabajador.cshtml
+++ b/CentroDeportivoElBicho/Views/Trabajador/LoginTrabajador.cshtml
@@ -1,6 +1,49 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+
 *@
 @{
-    <h2>Armar Login Trabajador</h2>
+    Layout = null;
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Trabajadores</title>
+    <link rel="stylesheet" href="~/css/LoginTrabajador.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+<body>
+
+    <div class="bg-img">
+        <div class="content">
+            <header> Login Trabajador</header>
+            <form action="#">
+            <div class="field">
+                <span class="fa fa-user"></span>
+                <input type="text" required placeholder="Ingrese su Correo" />
+            </div>
+            <div class="field space">
+                <span class="fa fa-lock"></span>
+                <input type="password" class="pass-key" required placeholder="Ingrese su Contraseña" />
+                <span class="show"> Mostrar </span>
+            </div>
+            <div class="pass">
+                <a href = "#"> Olvidaste la Contraseña?</a>
+            </div>
+            <div class="field">
+                <input type="submit" value="Login" />
+            </div>
+            </form>
+        </div>
+    </div>
+    
+
+
+
+    <script src="js/script.js"></script>
+    <script src="../../bootstrap/js/bootstrap.min.js"></script>
+    
+</body>
+</html>
 }
