--- a/CentroDeportivoElBicho/wwwroot/css/RegisterCliente.css
+++ b/CentroDeportivoElBicho/wwwroot/css/RegisterCliente.css
@@ -1,6 +1,6 @@
 ﻿body {
     /* background-color: #b1d3ff; */
-    background-image: url(../img/register_wallpaper.jpg);
+    background-image: url(../img/cristiano_wallpaper.jpg);
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: center center;
