--- a/CentroDeportivoElBicho/Views/Home/QuienesSomos.cshtml
+++ b/CentroDeportivoElBicho/Views/Home/QuienesSomos.cshtml
@@ -3,6 +3,10 @@
 *@
 @{
     <h1>Quienes somos</h1>
-    <p>Somos un recinto deportivo en el cual otorgamos las instalaciones para que los deportistas puedan realizar sus arriendos y bla bla</p>
+    @for(int i = 0; i<50; i++)
+    {
+        <p>Me da flojera explicar sobre la empresa</p>
+    }
+ 
 }
 
