--- a/CentroDeportivoElBicho/wwwroot/css/Login.css
+++ b/CentroDeportivoElBicho/wwwroot/css/Login.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url(../img/register_wallpaper.jpg);
+    background-image: url(../img/cristiano_wallpaper.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100vw 100vh;
