--- a/CentroDeportivoElBicho/wwwroot/css/site.css
+++ b/CentroDeportivoElBicho/wwwroot/css/site.css
@@ -66,7 +66,7 @@ i {
 .item-3 {
     width: 100%;
     height: 100%;
-    background-image: url(../img/carousel-3.jpg);
+    background-image: url(../img/sintetica3.jpg);
     background-size: cover;
     background-position: center;
 }
